More CSS fixes and dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -162,3 +162,19 @@ hr {
 	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
 }
+
+
+/* Dark Mode */
+.dark body {
+	background: rgb(var(--black));
+	color: #fff !important;
+}
+
+.dark h1,
+.dark h2,
+.dark h3,
+.dark h4,
+.dark h5,
+.dark h6 {
+	color: #fff;
+}
